[tool.poetry]
name = "toolhub"
version = "0.1.0"
description = "Makerspace tool management"
authors = ["Patrick Forringer <patrick@forringer.com>", "Jeremy Satterfield <jsatt@jsatt.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
django = "=2.1.2"
pycatalog = "=1.2.0"
jinja2 = "=2.10"
django-environ = "=0.4.5"
psycopg2-binary = "=2.7.5"
django-extensions = "=2.1.3"
django-tagulous = "=0.13.2"
django-jinja = "=2.4.1"
django-crispy-forms = "=1.7.2"
transitions = "=0.6.8"
django-filter = "^2.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.11.0"
Werkzeug = "=0.14.1"
ipython = "^7.0"
isort = "^4.3"
flake8 = "^3.5"

[tool.black]
line-length = 88
py37 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/'''
