[tool.poetry]
name = "toolhub"
version = "0.1.0"
description = "Makerspace tool management"
authors = ["Patrick Forringer <patrick@forringer.com>", "Jeremy Satterfield <jsatt@jsatt.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "=2.1.4"
pycatalog = "=1.2.0"
jinja2 = "=2.10"
django-environ = "=0.4.5"
psycopg2-binary = "=2.7.5"
django-extensions = "=2.1.3"
django-tagulous = "=0.13.2"
django-jinja = "=2.4.1"
django-crispy-forms = "=1.7.2"
transitions = "=0.6.9"
django-filter = "^2.0"
django-colorful = "^1.3"
django-jinja-markdown = "^1.0"
django-markdownx = "=2.0.28"
django-braces = "^1.13"

[tool.poetry.dev-dependencies]
ipdb = "^0.11.0"
Werkzeug = "=0.14.1"
ipython = "^7.0"
isort = "^4.3"
flake8 = "^3.5"
django-debug-toolbar = "^1.10"
pytest = "^3.9"
pytest-sugar = "^0.9.1"
pytest-django = "^3.4"
pytest-xdist = "^1.23"
black = "^18.3-alpha.0"
pre-commit = "^1.11"
model-mommy = "^1.6"

[tool.black]
line-length = 99
py37 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | /static
  | /docker
  | /scripts
  | migrations
)/'''
