[tool.poetry]
name = "toolhub"
version = "0.1.0"
description = "Makerspace tool management"
authors = ["Patrick Forringer <patrick@forringer.com>", "Jeremy Satterfield <jsatt@jsatt.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "=2.1.11"
pycatalog = "=1.2.0"
jinja2 = "=2.10.1"
django-environ = "=0.4.5"
psycopg2-binary = "=2.8.3"
django-extensions = "=2.1.6"
django-tagulous = "=0.14.0"
django-jinja = "=2.4.1"
django-crispy-forms = "=1.7.2"
transitions = "=0.6.9"
django-filter = "^2.0"
django-colorful = "^1.3"
django-markdownx = "=2.0.28"
django-braces = "^1.13"
django-qr-code = "^1.0"
django-memoize = "^2.2"
gunicorn = "^19.9"
whitenoise = "^5.0"
django-allauth = { git = "https://github.com/pennersr/django-allauth.git", commit = "f70cb3d" }
#django-allauth = "^0.39.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.12"
Werkzeug = "=0.15.4"
ipython = "^7.8"
isort = "^4.3"
flake8 = "^3.7"
django-debug-toolbar = "^2.0"
pytest = "^5.3"
pytest-sugar = "^0.9.2"
pytest-django = "^3.7"
pytest-xdist = "^1.28"
black = "^19.3b0"
model-mommy = "^1.6"

[tool.black]
line-length = 99
py37 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | /static
  | /docker
  | /scripts
  | migrations
)/'''
